[package]
name = "read-json"
version = "0.1.0"
authors = ["David Egan <david@carawebs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"
rust-crypto = "0.2.36"
aes-ctr = "0.3.0"
